# resilio-sync-cli

./: .pre-commit-config.yaml  Makefile  pyproject.toml  readme.md
src/resilio_sync_cli/: __init__.py
