[project]
name = "resilio_sync_cli"
version = "0.1.0"

requires-python = ">= 3.12"
dependencies = ["requests"]

[project.optional-dependencies]
dev = ["pytest", "mypy", "types-requests"]

[project.scripts]
resilio-sync-cli = "resilio_sync_cli:entry_point"

[tool.mypy]
mypy_path = "$MYPY_CONFIG_FILE_DIR/src:$MYPY_CONFIG_FILE_DIR/tests"
files = ["src", "tests"]
strict = true
enable_error_code = "unreachable, redundant-expr, possibly-undefined, truthy-bool, truthy-iterable, unused-awaitable, explicit-override, mutable-override"

[tool.pytest.ini_options]
testpaths = "tests"

[tool.black]
skip-magic-trailing-comma = true

[tool.isort]
profile = "black"
force_single_line = true
